--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -113,25 +113,25 @@ html(lang="en" class="scroll-smooth")
             p(class="text-xl text-white rounded-2xl absolute left-0 bottom-0 h-0 w-full p-8 bg-gray-500 bg-opacity-70 transition-all duration-1000 opacity-0 group-hover:opacity-100 group-hover:h-full group-hover:w-full") This model is to analyze brain images for detecting tumors. It provides fast, accurate assessments to support healthcare professionals in diagnosing and treating brain conditions effectively.
         // ========================================== Model 2 ==========================================
         a(href="" class="block p-2 border border-slate-300 rounded-2xl")
-        a(href="/heart-disease" class="block p-2 border border-slate-300 rounded-2xl")
+        a(href="/chest-x-ray" class="block p-2 border border-slate-300 rounded-2xl")
           div(class="h-[300px] max-600:col-span-2 cursor-pointer relative group")
-            h1(class="absolute top-20 left-1/2 -translate-x-1/2 text-3xl text-blue-950") Heart Disease Test
+            h1(class="absolute top-20 left-1/2 -translate-x-1/2 text-3xl font-bold w-[100%] text-center text-blue-400") Chest X Ray Test
             p(class="absolute top-36 left-10 text-xl text-blue-950") This is an AI model to analyze heart-related data and predict the risk of heart disease, offering quick insights for early diagnosis and prevention.
-            img(src="/img/images/models-bg/heart-disease-bg.jpg" class="w-full h-full object-cover rounded-2xl")
+            img(src="/img/images/models-bg/chest-x-ray-bg.jpg" class="w-full h-full object-cover rounded-2xl")
             p(class="text-xl text-white rounded-2xl absolute left-0 bottom-0 h-0 w-full p-8 bg-gray-500 bg-opacity-70 transition-all duration-1000 opacity-0 group-hover:opacity-100 group-hover:h-full group-hover:w-full") This model designed to assess heart health by analyzing various medical data. The model identifies potential risks for heart disease, providing healthcare professionals with accurate predictions to enable early intervention and improve patient outcomes.
         // ========================================== Model 3 ==========================================
-        a(href="model3" class="block p-2 border border-slate-300 rounded-2xl")
+        a(href="/breast-cancer" class="block p-2 border border-slate-300 rounded-2xl")
           div(class="h-[300px] max-900:col-span-2 max-600:col-span-2 cursor-pointer relative group")
-            h1(class="absolute top-20 left-1/2 -translate-x-1/2 text-3xl font-bold") Model 3
+            h1(class="absolute top-20 left-1/2 -translate-x-1/2 text-3xl font-bold w-[100%] text-center text-blue-400") Breast Cancer Test
             p(class="absolute top-36 left-10 text-xl") This is a simple description of Model
-            img(src="../images/test.jpg" class="w-full h-full object-cover rounded-2xl")
+            img(src="/img/images/models-bg/breast-cancer-bg.jpg" class="w-full h-full object-cover rounded-2xl")
             p(class="text-xl text-white rounded-2xl absolute left-0 bottom-0 h-0 w-full p-8 bg-gray-500 bg-opacity-70 transition-all duration-1000 opacity-0 group-hover:opacity-100 group-hover:h-full group-hover:w-full") MORE information about this model
         // ========================================== Model 4 ==========================================
-        a(href="model4.pug" class="block p-2 border border-slate-300 rounded-2xl")
+        a(href="/heart-disease" class="block p-2 border border-slate-300 rounded-2xl")
           div(class="h-[300px] max-900:col-span-2 max-600:col-span-2 cursor-pointer relative group")
-            h1(class="absolute top-20 left-1/2 -translate-x-1/2 text-3xl font-bold") Model 4
+            h1(class="absolute top-20 left-1/2 -translate-x-1/2 text-3xl font-bold w-[100%] text-center") Heart Disease Test
             p(class="absolute top-36 left-10 text-xl") This is a simple description of Model
-            img(src="../images/test.jpg" class="w-full h-full object-cover rounded-2xl")
+            img(src="/img/images/models-bg/heart-disease-bg.jpg" class="w-full h-full object-cover rounded-2xl")
             p(class="text-xl text-white rounded-2xl absolute left-0 bottom-0 h-0 w-full p-8 bg-gray-500 bg-opacity-70 transition-all duration-1000 opacity-0 group-hover:opacity-100 group-hover:h-full group-hover:w-full") MORE information about this model
         // ========================================== Model 5 ==========================================
         a(href="model5.pug" class="block p-2 border border-slate-300 rounded-2xl")
