--- a/src/views/model1.pug
+++ b/src/views/model1.pug
@@ -43,7 +43,7 @@ html(lang="en")
             a(href="Profile.pug" class="inline-block h-full w-full") Profile
     // !========================================== End Nav Bar ==========================================
 
-    h1(class="text-3xl text-center p-10 font-mono") Brain Tumor Test
+    h2(class="text-5xl font-semibold text-center text-blue-700 m-5") Brain Tumor Test
     section(class="py-14 font-mono bg-[#2b2e34]")
       form#dropzone(class="w-2/3 max-700:w-11/12 max-600:w-full mx-auto bg-white p-2 border-2 border-dashed border-gray-300 rounded-lg shadow-sm hover:border-blue-400 focus-within:ring-2 focus-within:ring-blue-400 focus-within:ring-offset-2" action="/predict-brain-tumor" method="POST"  enctype="multipart/form-data")
         // Image Container
