--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -15,7 +15,7 @@ html(lang="en")
             h1(class="text-2xl font-semibold") Welcome Back
             small(class="text-gray-400 text-sm") Please enter your information.
 
-            form(action="/users/login" method="POST" class="mt-4" )
+            form(action="http://localhost:3000/users/login" method="POST" class="mt-4" )
               div(class="mb-3")
                 label(class="mb-2 block text-xl font-semibold") Username or Email
                 input(name="email" type="text" placeholder="example@example.com" required class="block w-full rounded-md border border-gray-300 focus:border-blue-700 focus:outline-none focus:ring-1 focus:ring-blue-700 py-1 px-1.5 text-gray-700")
@@ -30,7 +30,7 @@ html(lang="en")
               div(class="mb-3 flex flex-wrap content-center")
                 input(id="remember" type="checkbox" name="remember" class="mr-1 checked:bg-blue-700")
                 label(for="remember" class="mr-auto text-sm font-semibold") Remember me
-                a(href="/forgot-password" class="text-sm font-semibold text-blue-700") Forgot password?
+                a(href="/forget-password" class="text-sm font-semibold text-blue-700") Forgot password?
               
               if message  
                 p(class="text-red-500") #{message}
