sending emails for the patient relative if the predicton result was infected, check if user added relative email, enable the patient to input a relative email if he didn't do that.

--- a/src/views/model4.pug
+++ b/src/views/model4.pug
@@ -48,6 +48,7 @@ html(lang="en")
     section(class="grid content-center justify-center mx-auto p-6 bg-white rounded-lg shadow-md")
       form(class="space-y-6 w-[60rem]" action="/predict-heart-disease" method="POST")
         //- div(class="grid grid-cols-1 md:grid-cols-2 gap-6")
+        input(type="text" value="Breast Cancer Specialist" name="modelName" style="display:none")
 
         //-   // Age Input
         //-   div(class="space-y-2")
