--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -58,7 +58,7 @@ html(lang="en" class="scroll-smooth")
             li(class="w-full hover:bg-[#2b2e34] hover:text-white cursor-pointer my-2 p-2 text-lg")
               a(href="/profile" class="inline-block h-full w-full") Profile
     main
-      section(class="bg-gray-100 h-[500px] flex")
+      section(class="bg-gray-100 h-[70vh] flex")
         div(class="w-1/2 flex justify-center items-center max-1000:pl-8")
           div
             h1(class="font-mono text-3xl font-semibold") Welcome to NeuroHeart Health
@@ -66,7 +66,7 @@ html(lang="en" class="scroll-smooth")
             a(href="#models" class="inline-block mt-8 text-gray-600 hover:underline") Check Your Disease Now
         div(class="w-1/2")
           img(src="/img/images/home-header.jpg" class="w-full h-full object-cover relative z-10" alt="")
-      section(class="bg-[#2b2e34] py-8")
+      section(class="bg-[#2b2e34] h-[25vh] py-8")
         div(class="w-1/2 flex flex-col justify-center items-center pl-14 max-900:px-12 max-1000:w-full")
           h2(class="w-full text-white text-2xl") Our Solutions Guide You 
             span(class="text-gray-400 inline-block mt-4") Towards a Healthier Future, One Step at a Time.
@@ -74,7 +74,7 @@ html(lang="en" class="scroll-smooth")
             button(class="bg-white text-xl text-[#2b2e34] hover:bg-[#66c7ff] px-4 py-2 rounded-sm outline-none")
               a(href="#Services") See Our Service
             button(class="bg-gray-300 text-xl hover:bg-[#2b2e34] hover:text-white px-4 py-2 rounded-sm outline-none")
-              a(href="#models") Check Your Disease NOW
+              a(href="#models") Examine Your Health NOW
       section#Services(class="p-8 font-mono w-4/5 mx-auto max-900:w-full")
         h1(class="text-4xl font-bod text-center p-16") Our Service
         div(class="h-96 flex gap-20 mb-16 max-700:h-auto max-700:mb-10 max-800:gap-10")
