--- a/src/views/model1.pug
+++ b/src/views/model1.pug
@@ -21,10 +21,10 @@ html(lang="en")
             a(href="/home") Home
             span(class="absolute left-0 -bottom-1 h-0.5 w-0 bg-black transition-all duration-1000 group-hover:w-full")
           li(class="mx-6 cursor-pointer text-xl relative group hover:text-blue-900")
-            a(href="/home") Services
+            a(href="/home#Services") Services
             span(class="absolute left-0 -bottom-1 h-0.5 w-0 bg-black transition-all duration-1000 group-hover:w-full")
           li(class="mx-6 cursor-pointer text-xl relative group hover:text-blue-900")
-            a(href="/home") Models
+            a(href="/home#models") Models
             span(class="absolute left-0 -bottom-1 h-0.5 w-0 bg-black transition-all duration-1000 group-hover:w-full")
           li(class="mx-6 cursor-pointer text-xl relative group hover:text-blue-900")
             a(href="/profile") Profile
@@ -34,20 +34,20 @@ html(lang="en")
           li(class="w-full cursor-pointer p-2" onclick="handleClickClose()")
             img(id="close_icon" src="../images/close.svg" class="w-8")
           li(class="w-full hover:bg-[#2b2e34] hover:text-white cursor-pointer my-2 p-2 text-lg")
-            a(href="home.pug#home" class="inline-block h-full w-full") Home
+            a(href="/home" class="inline-block h-full w-full") Home
           li(class="w-full hover:bg-[#2b2e34] hover:text-white cursor-pointer my-2 p-2 text-lg")
-            a(href="home.pug#Services" class="inline-block h-full w-full") Services
+            a(href="/home#Services" class="inline-block h-full w-full") Services
           li(class="w-full hover:bg-[#2b2e34] hover:text-white cursor-pointer my-2 p-2 text-lg")
-            a(href="home.pug#models" class="inline-block h-full w-full") Models
+            a(href="/home#models" class="inline-block h-full w-full") Models
           li(class="w-full hover:bg-[#2b2e34] hover:text-white cursor-pointer my-2 p-2 text-lg")
-            a(href="Profile.pug" class="inline-block h-full w-full") Profile
+            a(href="/profile" class="inline-block h-full w-full") Profile
     // !========================================== End Nav Bar ==========================================
 
     h2(class="text-5xl font-semibold text-center text-blue-700 m-5") Brain Tumor Test
     section(class="py-14 font-mono bg-[#2b2e34]")
       form#dropzone(class="w-2/3 max-700:w-11/12 max-600:w-full mx-auto bg-white p-2 border-2 border-dashed border-gray-300 rounded-lg shadow-sm hover:border-blue-400 focus-within:ring-2 focus-within:ring-blue-400 focus-within:ring-offset-2" action="/predict-brain-tumor" method="POST"  enctype="multipart/form-data")
         // Image Container
-        input(type="text" value="Brain Tumor Test" name="modelName" style="display:none")
+        input(type="text" value="Brain Tumor Specialist" name="modelName" style="display:none")
         div(class="h-96 bg-gray-300 relative rounded-xl")
           input#fileInput(type="file" name="image" accept="image/*" class="absolute top-0 left-0 h-full w-full z-50 opacity-0 cursor-pointer" required)
           div#placeholder(class="absolute top-0 left-0 h-full w-full flex flex-col items-center justify-center text-center p-4")
