--- a/src/views/model3.pug
+++ b/src/views/model3.pug
@@ -47,6 +47,8 @@ html(lang="en")
     h2(class="text-5xl font-semibold text-center text-blue-700 m-5") Breast Cancer Test
     section(class="max-w-7xl mx-auto p-6 bg-white rounded-lg shadow-md")
       form(class="space-y-6" action="/predict-breast-cancer" method="POST")
+      
+        input(type="text" value="Breast Cancer Specialist" name="modelName" style="display:none")
         //- Main sections container with horizontal layout
         div(class="flex flex-col lg:flex-row gap-6 mb-6")
           //- Mean Values Section
