--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -62,6 +62,11 @@ html(lang="en")
                 div(class="flex flex-col sm:flex-row items-center justify-between bg-white rounded-lg shadow-md p-6 mb-4 hover:shadow-lg transition-shadow duration-200")
                   div(class="flex flex-col space-y-2 w-full sm:w-2/3")
                     div(class="flex items-center space-x-2")
+                      span(class="text-gray-600 font-medium") Prediction Test:
+                      - const predictionTest = prediction.modelName.replace('Specialist','Test');
+                      h2(class="text-xl font-bold text-blue-500") #{predictionTest}
+
+                    div(class="flex items-center space-x-2")
                       span(class="text-gray-600 font-medium") Prediction Result:
                       h2(class="text-xl font-bold text-gray-800") #{prediction.result}
 
